src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> module
Rule 1     module -> MODULE IDENTIFIER LPAREN port_list RPAREN SEMI module_items ENDMODULE
Rule 2     port_list -> port
Rule 3     port_list -> port_list COMMA port
Rule 4     port -> INPUT range_opt IDENTIFIER
Rule 5     port -> OUTPUT range_opt IDENTIFIER
Rule 6     range_opt -> LSQUARE NUMBER COLON NUMBER RSQUARE
Rule 7     range_opt -> empty
Rule 8     empty -> <empty>
Rule 9     module_items -> module_item
Rule 10    module_items -> module_items module_item
Rule 11    module_item -> wire_declaration
Rule 12    module_item -> assignment
Rule 13    wire_declaration -> WIRE range_opt IDENTIFIER SEMI
Rule 14    assignment -> ASSIGN IDENTIFIER EQ expression SEMI
Rule 15    expression -> expression PLUS expression
Rule 16    expression -> expression MINUS expression
Rule 17    expression -> expression TIMES expression
Rule 18    expression -> expression DIVIDE expression
Rule 19    expression -> expression AND expression
Rule 20    expression -> expression OR expression
Rule 21    expression -> expression EQEQ expression
Rule 22    expression -> expression NEQ expression
Rule 23    expression -> expression LT expression
Rule 24    expression -> expression LE expression
Rule 25    expression -> expression GT expression
Rule 26    expression -> expression GE expression
Rule 27    expression -> expression BITAND expression
Rule 28    expression -> expression BITOR expression
Rule 29    expression -> expression BITXOR expression
Rule 30    expression -> expression LSHIFT expression
Rule 31    expression -> expression RSHIFT expression
Rule 32    expression -> MINUS expression
Rule 33    expression -> NOT expression
Rule 34    expression -> BITNOT expression
Rule 35    expression -> LPAREN expression RPAREN
Rule 36    expression -> NUMBER
Rule 37    expression -> IDENTIFIER

Terminals, with rules where they appear

AND                  : 19
ASSIGN               : 14
BITAND               : 27
BITNOT               : 34
BITOR                : 28
BITXOR               : 29
COLON                : 6
COMMA                : 3
DIVIDE               : 18
ENDMODULE            : 1
EQ                   : 14
EQEQ                 : 21
GE                   : 26
GT                   : 25
IDENTIFIER           : 1 4 5 13 14 37
INPUT                : 4
LE                   : 24
LPAREN               : 1 35
LSHIFT               : 30
LSQUARE              : 6
LT                   : 23
MINUS                : 16 32
MODULE               : 1
NEQ                  : 22
NOT                  : 33
NUMBER               : 6 6 36
OR                   : 20
OUTPUT               : 5
PLUS                 : 15
RPAREN               : 1 35
RSHIFT               : 31
RSQUARE              : 6
SEMI                 : 1 13 14
TIMES                : 17
WIRE                 : 13
error                : 

Nonterminals, with rules where they appear

assignment           : 12
empty                : 7
expression           : 14 15 15 16 16 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 33 34 35
module               : 0
module_item          : 9 10
module_items         : 1 10
port                 : 2 3
port_list            : 1 3
range_opt            : 4 5 13
wire_declaration     : 11

Parsing method: LALR

state 0

    (0) S' -> . module
    (1) module -> . MODULE IDENTIFIER LPAREN port_list RPAREN SEMI module_items ENDMODULE

    MODULE          shift and go to state 2

    module                         shift and go to state 1

state 1

    (0) S' -> module .



state 2

    (1) module -> MODULE . IDENTIFIER LPAREN port_list RPAREN SEMI module_items ENDMODULE

    IDENTIFIER      shift and go to state 3


state 3

    (1) module -> MODULE IDENTIFIER . LPAREN port_list RPAREN SEMI module_items ENDMODULE

    LPAREN          shift and go to state 4


state 4

    (1) module -> MODULE IDENTIFIER LPAREN . port_list RPAREN SEMI module_items ENDMODULE
    (2) port_list -> . port
    (3) port_list -> . port_list COMMA port
    (4) port -> . INPUT range_opt IDENTIFIER
    (5) port -> . OUTPUT range_opt IDENTIFIER

    INPUT           shift and go to state 7
    OUTPUT          shift and go to state 8

    port_list                      shift and go to state 5
    port                           shift and go to state 6

state 5

    (1) module -> MODULE IDENTIFIER LPAREN port_list . RPAREN SEMI module_items ENDMODULE
    (3) port_list -> port_list . COMMA port

    RPAREN          shift and go to state 9
    COMMA           shift and go to state 10


state 6

    (2) port_list -> port .

    RPAREN          reduce using rule 2 (port_list -> port .)
    COMMA           reduce using rule 2 (port_list -> port .)


state 7

    (4) port -> INPUT . range_opt IDENTIFIER
    (6) range_opt -> . LSQUARE NUMBER COLON NUMBER RSQUARE
    (7) range_opt -> . empty
    (8) empty -> .

    LSQUARE         shift and go to state 12
    IDENTIFIER      reduce using rule 8 (empty -> .)

    range_opt                      shift and go to state 11
    empty                          shift and go to state 13

state 8

    (5) port -> OUTPUT . range_opt IDENTIFIER
    (6) range_opt -> . LSQUARE NUMBER COLON NUMBER RSQUARE
    (7) range_opt -> . empty
    (8) empty -> .

    LSQUARE         shift and go to state 12
    IDENTIFIER      reduce using rule 8 (empty -> .)

    range_opt                      shift and go to state 14
    empty                          shift and go to state 13

state 9

    (1) module -> MODULE IDENTIFIER LPAREN port_list RPAREN . SEMI module_items ENDMODULE

    SEMI            shift and go to state 15


state 10

    (3) port_list -> port_list COMMA . port
    (4) port -> . INPUT range_opt IDENTIFIER
    (5) port -> . OUTPUT range_opt IDENTIFIER

    INPUT           shift and go to state 7
    OUTPUT          shift and go to state 8

    port                           shift and go to state 16

state 11

    (4) port -> INPUT range_opt . IDENTIFIER

    IDENTIFIER      shift and go to state 17


state 12

    (6) range_opt -> LSQUARE . NUMBER COLON NUMBER RSQUARE

    NUMBER          shift and go to state 18


state 13

    (7) range_opt -> empty .

    IDENTIFIER      reduce using rule 7 (range_opt -> empty .)


state 14

    (5) port -> OUTPUT range_opt . IDENTIFIER

    IDENTIFIER      shift and go to state 19


state 15

    (1) module -> MODULE IDENTIFIER LPAREN port_list RPAREN SEMI . module_items ENDMODULE
    (9) module_items -> . module_item
    (10) module_items -> . module_items module_item
    (11) module_item -> . wire_declaration
    (12) module_item -> . assignment
    (13) wire_declaration -> . WIRE range_opt IDENTIFIER SEMI
    (14) assignment -> . ASSIGN IDENTIFIER EQ expression SEMI

    WIRE            shift and go to state 24
    ASSIGN          shift and go to state 25

    module_items                   shift and go to state 20
    module_item                    shift and go to state 21
    wire_declaration               shift and go to state 22
    assignment                     shift and go to state 23

state 16

    (3) port_list -> port_list COMMA port .

    RPAREN          reduce using rule 3 (port_list -> port_list COMMA port .)
    COMMA           reduce using rule 3 (port_list -> port_list COMMA port .)


state 17

    (4) port -> INPUT range_opt IDENTIFIER .

    RPAREN          reduce using rule 4 (port -> INPUT range_opt IDENTIFIER .)
    COMMA           reduce using rule 4 (port -> INPUT range_opt IDENTIFIER .)


state 18

    (6) range_opt -> LSQUARE NUMBER . COLON NUMBER RSQUARE

    COLON           shift and go to state 26


state 19

    (5) port -> OUTPUT range_opt IDENTIFIER .

    RPAREN          reduce using rule 5 (port -> OUTPUT range_opt IDENTIFIER .)
    COMMA           reduce using rule 5 (port -> OUTPUT range_opt IDENTIFIER .)


state 20

    (1) module -> MODULE IDENTIFIER LPAREN port_list RPAREN SEMI module_items . ENDMODULE
    (10) module_items -> module_items . module_item
    (11) module_item -> . wire_declaration
    (12) module_item -> . assignment
    (13) wire_declaration -> . WIRE range_opt IDENTIFIER SEMI
    (14) assignment -> . ASSIGN IDENTIFIER EQ expression SEMI

    ENDMODULE       shift and go to state 27
    WIRE            shift and go to state 24
    ASSIGN          shift and go to state 25

    module_item                    shift and go to state 28
    wire_declaration               shift and go to state 22
    assignment                     shift and go to state 23

state 21

    (9) module_items -> module_item .

    ENDMODULE       reduce using rule 9 (module_items -> module_item .)
    WIRE            reduce using rule 9 (module_items -> module_item .)
    ASSIGN          reduce using rule 9 (module_items -> module_item .)


state 22

    (11) module_item -> wire_declaration .

    ENDMODULE       reduce using rule 11 (module_item -> wire_declaration .)
    WIRE            reduce using rule 11 (module_item -> wire_declaration .)
    ASSIGN          reduce using rule 11 (module_item -> wire_declaration .)


state 23

    (12) module_item -> assignment .

    ENDMODULE       reduce using rule 12 (module_item -> assignment .)
    WIRE            reduce using rule 12 (module_item -> assignment .)
    ASSIGN          reduce using rule 12 (module_item -> assignment .)


state 24

    (13) wire_declaration -> WIRE . range_opt IDENTIFIER SEMI
    (6) range_opt -> . LSQUARE NUMBER COLON NUMBER RSQUARE
    (7) range_opt -> . empty
    (8) empty -> .

    LSQUARE         shift and go to state 12
    IDENTIFIER      reduce using rule 8 (empty -> .)

    range_opt                      shift and go to state 29
    empty                          shift and go to state 13

state 25

    (14) assignment -> ASSIGN . IDENTIFIER EQ expression SEMI

    IDENTIFIER      shift and go to state 30


state 26

    (6) range_opt -> LSQUARE NUMBER COLON . NUMBER RSQUARE

    NUMBER          shift and go to state 31


state 27

    (1) module -> MODULE IDENTIFIER LPAREN port_list RPAREN SEMI module_items ENDMODULE .

    $end            reduce using rule 1 (module -> MODULE IDENTIFIER LPAREN port_list RPAREN SEMI module_items ENDMODULE .)


state 28

    (10) module_items -> module_items module_item .

    ENDMODULE       reduce using rule 10 (module_items -> module_items module_item .)
    WIRE            reduce using rule 10 (module_items -> module_items module_item .)
    ASSIGN          reduce using rule 10 (module_items -> module_items module_item .)


state 29

    (13) wire_declaration -> WIRE range_opt . IDENTIFIER SEMI

    IDENTIFIER      shift and go to state 32


state 30

    (14) assignment -> ASSIGN IDENTIFIER . EQ expression SEMI

    EQ              shift and go to state 33


state 31

    (6) range_opt -> LSQUARE NUMBER COLON NUMBER . RSQUARE

    RSQUARE         shift and go to state 34


state 32

    (13) wire_declaration -> WIRE range_opt IDENTIFIER . SEMI

    SEMI            shift and go to state 35


state 33

    (14) assignment -> ASSIGN IDENTIFIER EQ . expression SEMI
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression NEQ expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression LE expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression BITAND expression
    (28) expression -> . expression BITOR expression
    (29) expression -> . expression BITXOR expression
    (30) expression -> . expression LSHIFT expression
    (31) expression -> . expression RSHIFT expression
    (32) expression -> . MINUS expression
    (33) expression -> . NOT expression
    (34) expression -> . BITNOT expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . NUMBER
    (37) expression -> . IDENTIFIER

    MINUS           shift and go to state 38
    NOT             shift and go to state 39
    BITNOT          shift and go to state 40
    LPAREN          shift and go to state 41
    NUMBER          shift and go to state 42
    IDENTIFIER      shift and go to state 36

    expression                     shift and go to state 37

state 34

    (6) range_opt -> LSQUARE NUMBER COLON NUMBER RSQUARE .

    IDENTIFIER      reduce using rule 6 (range_opt -> LSQUARE NUMBER COLON NUMBER RSQUARE .)


state 35

    (13) wire_declaration -> WIRE range_opt IDENTIFIER SEMI .

    ENDMODULE       reduce using rule 13 (wire_declaration -> WIRE range_opt IDENTIFIER SEMI .)
    WIRE            reduce using rule 13 (wire_declaration -> WIRE range_opt IDENTIFIER SEMI .)
    ASSIGN          reduce using rule 13 (wire_declaration -> WIRE range_opt IDENTIFIER SEMI .)


state 36

    (37) expression -> IDENTIFIER .

    SEMI            reduce using rule 37 (expression -> IDENTIFIER .)
    PLUS            reduce using rule 37 (expression -> IDENTIFIER .)
    MINUS           reduce using rule 37 (expression -> IDENTIFIER .)
    TIMES           reduce using rule 37 (expression -> IDENTIFIER .)
    DIVIDE          reduce using rule 37 (expression -> IDENTIFIER .)
    AND             reduce using rule 37 (expression -> IDENTIFIER .)
    OR              reduce using rule 37 (expression -> IDENTIFIER .)
    EQEQ            reduce using rule 37 (expression -> IDENTIFIER .)
    NEQ             reduce using rule 37 (expression -> IDENTIFIER .)
    LT              reduce using rule 37 (expression -> IDENTIFIER .)
    LE              reduce using rule 37 (expression -> IDENTIFIER .)
    GT              reduce using rule 37 (expression -> IDENTIFIER .)
    GE              reduce using rule 37 (expression -> IDENTIFIER .)
    BITAND          reduce using rule 37 (expression -> IDENTIFIER .)
    BITOR           reduce using rule 37 (expression -> IDENTIFIER .)
    BITXOR          reduce using rule 37 (expression -> IDENTIFIER .)
    LSHIFT          reduce using rule 37 (expression -> IDENTIFIER .)
    RSHIFT          reduce using rule 37 (expression -> IDENTIFIER .)
    RPAREN          reduce using rule 37 (expression -> IDENTIFIER .)


state 37

    (14) assignment -> ASSIGN IDENTIFIER EQ expression . SEMI
    (15) expression -> expression . PLUS expression
    (16) expression -> expression . MINUS expression
    (17) expression -> expression . TIMES expression
    (18) expression -> expression . DIVIDE expression
    (19) expression -> expression . AND expression
    (20) expression -> expression . OR expression
    (21) expression -> expression . EQEQ expression
    (22) expression -> expression . NEQ expression
    (23) expression -> expression . LT expression
    (24) expression -> expression . LE expression
    (25) expression -> expression . GT expression
    (26) expression -> expression . GE expression
    (27) expression -> expression . BITAND expression
    (28) expression -> expression . BITOR expression
    (29) expression -> expression . BITXOR expression
    (30) expression -> expression . LSHIFT expression
    (31) expression -> expression . RSHIFT expression

    SEMI            shift and go to state 43
    PLUS            shift and go to state 44
    MINUS           shift and go to state 45
    TIMES           shift and go to state 46
    DIVIDE          shift and go to state 47
    AND             shift and go to state 48
    OR              shift and go to state 49
    EQEQ            shift and go to state 50
    NEQ             shift and go to state 51
    LT              shift and go to state 52
    LE              shift and go to state 53
    GT              shift and go to state 54
    GE              shift and go to state 55
    BITAND          shift and go to state 56
    BITOR           shift and go to state 57
    BITXOR          shift and go to state 58
    LSHIFT          shift and go to state 59
    RSHIFT          shift and go to state 60


state 38

    (32) expression -> MINUS . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression NEQ expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression LE expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression BITAND expression
    (28) expression -> . expression BITOR expression
    (29) expression -> . expression BITXOR expression
    (30) expression -> . expression LSHIFT expression
    (31) expression -> . expression RSHIFT expression
    (32) expression -> . MINUS expression
    (33) expression -> . NOT expression
    (34) expression -> . BITNOT expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . NUMBER
    (37) expression -> . IDENTIFIER

    MINUS           shift and go to state 38
    NOT             shift and go to state 39
    BITNOT          shift and go to state 40
    LPAREN          shift and go to state 41
    NUMBER          shift and go to state 42
    IDENTIFIER      shift and go to state 36

    expression                     shift and go to state 61

state 39

    (33) expression -> NOT . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression NEQ expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression LE expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression BITAND expression
    (28) expression -> . expression BITOR expression
    (29) expression -> . expression BITXOR expression
    (30) expression -> . expression LSHIFT expression
    (31) expression -> . expression RSHIFT expression
    (32) expression -> . MINUS expression
    (33) expression -> . NOT expression
    (34) expression -> . BITNOT expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . NUMBER
    (37) expression -> . IDENTIFIER

    MINUS           shift and go to state 38
    NOT             shift and go to state 39
    BITNOT          shift and go to state 40
    LPAREN          shift and go to state 41
    NUMBER          shift and go to state 42
    IDENTIFIER      shift and go to state 36

    expression                     shift and go to state 62

state 40

    (34) expression -> BITNOT . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression NEQ expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression LE expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression BITAND expression
    (28) expression -> . expression BITOR expression
    (29) expression -> . expression BITXOR expression
    (30) expression -> . expression LSHIFT expression
    (31) expression -> . expression RSHIFT expression
    (32) expression -> . MINUS expression
    (33) expression -> . NOT expression
    (34) expression -> . BITNOT expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . NUMBER
    (37) expression -> . IDENTIFIER

    MINUS           shift and go to state 38
    NOT             shift and go to state 39
    BITNOT          shift and go to state 40
    LPAREN          shift and go to state 41
    NUMBER          shift and go to state 42
    IDENTIFIER      shift and go to state 36

    expression                     shift and go to state 63

state 41

    (35) expression -> LPAREN . expression RPAREN
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression NEQ expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression LE expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression BITAND expression
    (28) expression -> . expression BITOR expression
    (29) expression -> . expression BITXOR expression
    (30) expression -> . expression LSHIFT expression
    (31) expression -> . expression RSHIFT expression
    (32) expression -> . MINUS expression
    (33) expression -> . NOT expression
    (34) expression -> . BITNOT expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . NUMBER
    (37) expression -> . IDENTIFIER

    MINUS           shift and go to state 38
    NOT             shift and go to state 39
    BITNOT          shift and go to state 40
    LPAREN          shift and go to state 41
    NUMBER          shift and go to state 42
    IDENTIFIER      shift and go to state 36

    expression                     shift and go to state 64

state 42

    (36) expression -> NUMBER .

    SEMI            reduce using rule 36 (expression -> NUMBER .)
    PLUS            reduce using rule 36 (expression -> NUMBER .)
    MINUS           reduce using rule 36 (expression -> NUMBER .)
    TIMES           reduce using rule 36 (expression -> NUMBER .)
    DIVIDE          reduce using rule 36 (expression -> NUMBER .)
    AND             reduce using rule 36 (expression -> NUMBER .)
    OR              reduce using rule 36 (expression -> NUMBER .)
    EQEQ            reduce using rule 36 (expression -> NUMBER .)
    NEQ             reduce using rule 36 (expression -> NUMBER .)
    LT              reduce using rule 36 (expression -> NUMBER .)
    LE              reduce using rule 36 (expression -> NUMBER .)
    GT              reduce using rule 36 (expression -> NUMBER .)
    GE              reduce using rule 36 (expression -> NUMBER .)
    BITAND          reduce using rule 36 (expression -> NUMBER .)
    BITOR           reduce using rule 36 (expression -> NUMBER .)
    BITXOR          reduce using rule 36 (expression -> NUMBER .)
    LSHIFT          reduce using rule 36 (expression -> NUMBER .)
    RSHIFT          reduce using rule 36 (expression -> NUMBER .)
    RPAREN          reduce using rule 36 (expression -> NUMBER .)


state 43

    (14) assignment -> ASSIGN IDENTIFIER EQ expression SEMI .

    ENDMODULE       reduce using rule 14 (assignment -> ASSIGN IDENTIFIER EQ expression SEMI .)
    WIRE            reduce using rule 14 (assignment -> ASSIGN IDENTIFIER EQ expression SEMI .)
    ASSIGN          reduce using rule 14 (assignment -> ASSIGN IDENTIFIER EQ expression SEMI .)


state 44

    (15) expression -> expression PLUS . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression NEQ expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression LE expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression BITAND expression
    (28) expression -> . expression BITOR expression
    (29) expression -> . expression BITXOR expression
    (30) expression -> . expression LSHIFT expression
    (31) expression -> . expression RSHIFT expression
    (32) expression -> . MINUS expression
    (33) expression -> . NOT expression
    (34) expression -> . BITNOT expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . NUMBER
    (37) expression -> . IDENTIFIER

    MINUS           shift and go to state 38
    NOT             shift and go to state 39
    BITNOT          shift and go to state 40
    LPAREN          shift and go to state 41
    NUMBER          shift and go to state 42
    IDENTIFIER      shift and go to state 36

    expression                     shift and go to state 65

state 45

    (16) expression -> expression MINUS . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression NEQ expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression LE expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression BITAND expression
    (28) expression -> . expression BITOR expression
    (29) expression -> . expression BITXOR expression
    (30) expression -> . expression LSHIFT expression
    (31) expression -> . expression RSHIFT expression
    (32) expression -> . MINUS expression
    (33) expression -> . NOT expression
    (34) expression -> . BITNOT expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . NUMBER
    (37) expression -> . IDENTIFIER

    MINUS           shift and go to state 38
    NOT             shift and go to state 39
    BITNOT          shift and go to state 40
    LPAREN          shift and go to state 41
    NUMBER          shift and go to state 42
    IDENTIFIER      shift and go to state 36

    expression                     shift and go to state 66

state 46

    (17) expression -> expression TIMES . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression NEQ expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression LE expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression BITAND expression
    (28) expression -> . expression BITOR expression
    (29) expression -> . expression BITXOR expression
    (30) expression -> . expression LSHIFT expression
    (31) expression -> . expression RSHIFT expression
    (32) expression -> . MINUS expression
    (33) expression -> . NOT expression
    (34) expression -> . BITNOT expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . NUMBER
    (37) expression -> . IDENTIFIER

    MINUS           shift and go to state 38
    NOT             shift and go to state 39
    BITNOT          shift and go to state 40
    LPAREN          shift and go to state 41
    NUMBER          shift and go to state 42
    IDENTIFIER      shift and go to state 36

    expression                     shift and go to state 67

state 47

    (18) expression -> expression DIVIDE . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression NEQ expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression LE expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression BITAND expression
    (28) expression -> . expression BITOR expression
    (29) expression -> . expression BITXOR expression
    (30) expression -> . expression LSHIFT expression
    (31) expression -> . expression RSHIFT expression
    (32) expression -> . MINUS expression
    (33) expression -> . NOT expression
    (34) expression -> . BITNOT expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . NUMBER
    (37) expression -> . IDENTIFIER

    MINUS           shift and go to state 38
    NOT             shift and go to state 39
    BITNOT          shift and go to state 40
    LPAREN          shift and go to state 41
    NUMBER          shift and go to state 42
    IDENTIFIER      shift and go to state 36

    expression                     shift and go to state 68

state 48

    (19) expression -> expression AND . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression NEQ expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression LE expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression BITAND expression
    (28) expression -> . expression BITOR expression
    (29) expression -> . expression BITXOR expression
    (30) expression -> . expression LSHIFT expression
    (31) expression -> . expression RSHIFT expression
    (32) expression -> . MINUS expression
    (33) expression -> . NOT expression
    (34) expression -> . BITNOT expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . NUMBER
    (37) expression -> . IDENTIFIER

    MINUS           shift and go to state 38
    NOT             shift and go to state 39
    BITNOT          shift and go to state 40
    LPAREN          shift and go to state 41
    NUMBER          shift and go to state 42
    IDENTIFIER      shift and go to state 36

    expression                     shift and go to state 69

state 49

    (20) expression -> expression OR . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression NEQ expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression LE expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression BITAND expression
    (28) expression -> . expression BITOR expression
    (29) expression -> . expression BITXOR expression
    (30) expression -> . expression LSHIFT expression
    (31) expression -> . expression RSHIFT expression
    (32) expression -> . MINUS expression
    (33) expression -> . NOT expression
    (34) expression -> . BITNOT expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . NUMBER
    (37) expression -> . IDENTIFIER

    MINUS           shift and go to state 38
    NOT             shift and go to state 39
    BITNOT          shift and go to state 40
    LPAREN          shift and go to state 41
    NUMBER          shift and go to state 42
    IDENTIFIER      shift and go to state 36

    expression                     shift and go to state 70

state 50

    (21) expression -> expression EQEQ . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression NEQ expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression LE expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression BITAND expression
    (28) expression -> . expression BITOR expression
    (29) expression -> . expression BITXOR expression
    (30) expression -> . expression LSHIFT expression
    (31) expression -> . expression RSHIFT expression
    (32) expression -> . MINUS expression
    (33) expression -> . NOT expression
    (34) expression -> . BITNOT expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . NUMBER
    (37) expression -> . IDENTIFIER

    MINUS           shift and go to state 38
    NOT             shift and go to state 39
    BITNOT          shift and go to state 40
    LPAREN          shift and go to state 41
    NUMBER          shift and go to state 42
    IDENTIFIER      shift and go to state 36

    expression                     shift and go to state 71

state 51

    (22) expression -> expression NEQ . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression NEQ expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression LE expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression BITAND expression
    (28) expression -> . expression BITOR expression
    (29) expression -> . expression BITXOR expression
    (30) expression -> . expression LSHIFT expression
    (31) expression -> . expression RSHIFT expression
    (32) expression -> . MINUS expression
    (33) expression -> . NOT expression
    (34) expression -> . BITNOT expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . NUMBER
    (37) expression -> . IDENTIFIER

    MINUS           shift and go to state 38
    NOT             shift and go to state 39
    BITNOT          shift and go to state 40
    LPAREN          shift and go to state 41
    NUMBER          shift and go to state 42
    IDENTIFIER      shift and go to state 36

    expression                     shift and go to state 72

state 52

    (23) expression -> expression LT . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression NEQ expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression LE expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression BITAND expression
    (28) expression -> . expression BITOR expression
    (29) expression -> . expression BITXOR expression
    (30) expression -> . expression LSHIFT expression
    (31) expression -> . expression RSHIFT expression
    (32) expression -> . MINUS expression
    (33) expression -> . NOT expression
    (34) expression -> . BITNOT expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . NUMBER
    (37) expression -> . IDENTIFIER

    MINUS           shift and go to state 38
    NOT             shift and go to state 39
    BITNOT          shift and go to state 40
    LPAREN          shift and go to state 41
    NUMBER          shift and go to state 42
    IDENTIFIER      shift and go to state 36

    expression                     shift and go to state 73

state 53

    (24) expression -> expression LE . expression
    (15) expression -> . expression PLUS expression
    (16) expression -> . expression MINUS expression
    (17) expression -> . expression TIMES expression
    (18) expression -> . expression DIVIDE expression
    (19) expression -> . expression AND expression
    (20) expression -> . expression OR expression
    (21) expression -> . expression EQEQ expression
    (22) expression -> . expression NEQ expression
    (23) expression -> . expression LT expression
    (24) expression -> . expression LE expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression GE expression
    (27) expression -> . expression BITAND expression
    (28) expression -> . expression BITOR expression
    (29) expression -> . expression BITXOR expression
    (30) expression -> . expression LSHIFT expression
    (31) expression -> . expression RSHIFT expression
    (32) expression -> . MINUS expression
    (33) expression -> . NOT expression
    (34) expression -> . BITNOT expression
    (35) expression -> . LPAREN expression RPAREN
    (36) expression -> . NUMBER
    (37) expression -> . IDENTIFIER
